overflow problem fixed

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -35,7 +35,6 @@
  }
 
  main{
-   overflow-x: hidden;
    position: relative;
    max-width: 92%;
    @include flex-center(column);
